--- a/.github/workflows/complex.yml
+++ b/.github/workflows/complex.yml
@@ -1,1 +1,32 @@
+name: complex-workflow
+on: push
+jobs:
+  ubuntu:
+    name: Print Date on linux
+    runs-on: ubuntu-latest
+    steps:
+      name: Print Date
+      uses: actions/checkout@v2
+      name: Step two
+      run: date
+
+  windows:
+    name: Print Date on windows
+    runs-on: windows-latest
+    steps:
+      name: Print Date
+      uses: actions/checkout@v2
+      name: Step two
+      run: date
+  depends:
+    needs: [ubuntu,windows]
+    runs-on: macos-latest
+    steps:
+      name: Print Date
+      run: date
+    
+
+  
+        
+    
 
