--- a/.github/workflows/pull_request_merge.yml
+++ b/.github/workflows/pull_request_merge.yml
@@ -1,7 +1,7 @@
 name: Auto Merge Owner PR
 on: 
   pull_request: 
-    types: [opened,reopened]
+    types: [opened]
 jobs:
   merge:
     runs-on: ubuntu-latest
