--- a/.github/workflows/CI-CD-Pipeline.yml
+++ b/.github/workflows/CI-CD-Pipeline.yml
@@ -4,7 +4,7 @@ env:
   App_Name: app2
 jobs:
   lint:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - name: setup python
